fix(toast): support auto-wrapping of long text

--- a/packages/toast/src/toast.css
+++ b/packages/toast/src/toast.css
@@ -20,10 +20,12 @@ governing permissions and limitations under the License.
 
     opacity: 0;
     pointer-events: none;
-    transition: transform var(--spectrum-overlay-animation-duration) ease-in-out,
+    transition:
+        transform var(--spectrum-overlay-animation-duration) ease-in-out,
         opacity var(--spectrum-overlay-animation-duration) ease-in-out,
         visibility 0s linear var(--spectrum-overlay-animation-duration);
     visibility: hidden;
+    overflow-wrap: anywhere; /* Allow long texts to wrap in the toast */
 }
 
 :host([open]) {
